# GFrame

./: .gitignore  .travis.yml  BasicGeometry.cpp  CMakeLists.txt  README.md  buildExamples.sh  buildSource.sh  buildStandalone.sh  buildXcode.sh
Examples/: BasicGeometry.cpp
GFrame/: .gitignore  CMakeLists.txt  main.cpp
GFrame/TemplateProject.xcodeproj/: project.pbxproj
GFrame/TemplateProject.xcodeproj/project.xcworkspace/xcuserdata/xuzebin.xcuserdatad/: UserInterfaceState.xcuserstate
GFrame/assets/models/monk/: Monk_Giveaway_Fixed.mtl
GFrame/base/: Vertex.h  glsupport.h  matrix4.h
GFrame/core/: Camera.cpp  Camera.hpp  FpsCamera.h  Light.h  RigidBodyTransform.h  Scene.h  Transform.h
GFrame/entities/: Entity.cpp  Entity.hpp  Model.h
GFrame/examples/: CMakeLists.txt  main.cpp
GFrame/examples/ColoredModel/: CMakeLists.txt  ColoredModel.cpp
GFrame/examples/SimpleModel/: CMakeLists.txt  SimpleModel.cpp
GFrame/examples/TexturedModel/: CMakeLists.txt  TexturedModel.cpp
GFrame/examples/Trackball/: CMakeLists.txt  Trackball.cpp
GFrame/geometries/: Cube.h  Geometry.cpp  Geometry.hpp  Mesh.hpp  Plane.h  Skybox.h  Sphere.h
GFrame/glObjects/: FrameBufferObject.h
GFrame/helper/: Util.h
GFrame/materials/: Color.h  Cubemap.cpp  Cubemap.hpp  Material.h  Texture.hpp
GFrame/physics/: Raycaster.h
GFrame/programs/: ModelShader.h  Shader.h  ShadowShader.h  TextureShader.h
GFrame/res/models/: Monk_Giveaway_Fixed.mtl
GFrame/src/: CMakeLists.txt
GFrame/src/base/: cvec.h  quat.h
GFrame/src/controls/: Trackball.hpp
GFrame/src/core/: #Scene.hpp#  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  RigidBodyTransform.cpp  RigidBodyTransform.h  RigidBodyTransform.hpp  Scene.cpp  Scene.h  Scene.hpp  Transform.cpp  Transform.h  Transform.hpp
GFrame/src/entities/: Entity.cpp  Entity.hpp  Model.cpp  Model.h
GFrame/src/geometries/: Cube.h  Geometry.cpp  Geometry.hpp  Mesh.cpp  Plane.h  Screen.h  Skybox.h  Sphere.h
GFrame/src/materials/: Cubemap.cpp  Cubemap.hpp  Material.h  Texture.hpp
GFrame/src/physics/: Raycaster.cpp  Raycaster.hpp
GFrame/src/programs/: ColorShader.h  ModelShader.h  ScreenShader.h  Shader.h  ShadowShader.h  TextureShader.h
assets/models/head/: head.mtl
examples/: CMakeLists.txt  main.cpp
examples/Button3D/: Button3D.cpp  CMakeLists.txt
examples/ColoredModel/: CMakeLists.txt  ColoredModel.cpp
examples/GJK/: CMakeLists.txt  gjk.cpp
examples/GLFWTest/: CMakeLists.txt  GLFWTest.cpp
examples/OffscreenRendering/: CMakeLists.txt  OffscreenRendering.cpp
examples/PBR/: CMakeLists.txt  PBR.cpp  PBRShader.h  PBRTextureShader.h  pbr_fs.glsl  pbr_texture_fs.glsl  pbr_vs.glsl
examples/PostProcessing/FXAA/: CMakeLists.txt  FXAA.cpp
examples/PostProcessing/ToneMapping/: CMakeLists.txt  ToneMapping.cpp  ToneMapping.cpp.glut
examples/RollingSphere/: CMakeLists.txt  RollingSphere.cpp
examples/Skybox/: CMakeLists.txt  Skybox.cpp
examples/TexturedModel/: CMakeLists.txt  TexturedModel.cpp
examples/Trackball/: CMakeLists.txt  Trackball.cpp
models/Monk_Giveaway/: Monk_Giveaway.mtl  Monk_Giveaway_Fixed.mtl
shaders/: fragment_shader_model.glsl  vertex_shader_shadow.glsl
src/: Base.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Core.h  Cube.h  Cubemap.cpp  Cubemap.hpp  Entities.h  Entity.cpp  Entity.h  Entity.hpp  FpsCamera.h  FrameBufferObject.h  GFrame.h  Geometries.h  Geometry.cpp  Geometry.h  Geometry.hpp  Light.cpp  Light.h  Light.hpp  Material.h  Materials.h  Mesh.cpp  Mesh.hpp  Model.h  ModelShader.h  Plane.h  Programs.h  Raycaster.h  RigidBodyTransform.h  Scene.h  Screen.h  ScreenShader.h  Shader.h  ShaderProgram.h  ShadowShader.h  Skybox.h  (+13 more)
src/base/: cvec.h  glsupport.cpp  glsupport.h  matrix4.h  quat.h
src/controls/: Trackball.cpp  Trackball.hpp
src/core/: Camera.cpp  Camera.h  Camera.hpp  Light.h  RigidBodyTransform.hpp  Scene.cpp  Scene.h  Scene.hpp  Transform.hpp
src/entities/: Entity.cpp  Entity.hpp  Model.cpp  Model.h  Model.hpp
src/geometries/: Cube.h  Geometry.cpp  Geometry.hpp  LineCube.h  Mesh.cpp  Mesh.hpp  Plane.h  Screen.h  Skybox.h  Sphere.h
src/glObjects/: FrameBufferObject.cpp
src/helper/: Screenshot.h
src/materials/: Color.h  Cubemap.hpp  Material.cpp  Material.h  Texture.hpp
src/physics/: Raycaster.h
src/programs/: ColorShader.h  ModelShader.h  ScreenShader.h  Shader.h  TextureShader.h
src/shaders/: vertex_shader_texture.glsl
